syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service SecurityLoginsRole{

	rpc ReadSecurityLoginsRole (IdRequest16) returns (SecurityLoginsRolePayload);
	rpc CreateSecurityLoginsRole (SecurityLoginsRolePayload) returns (google.protobuf.Empty);
	rpc UpdateSecurityLoginsRole (SecurityLoginsRolePayload) returns (google.protobuf.Empty);
	rpc DeleteSecurityLoginsRole (SecurityLoginsRolePayload) returns (google.protobuf.Empty);
}

message IdRequest16 {
	string Id = 1;
}

message SecurityLoginsRolePayload{
                               
         string Id =1;
         string Login=2;
         string Role=3;

}